--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>React-Redux-Saga Boilerplate</title>
+  <title>Aplicativos Libres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="assets/media/favicon.ico">
   <style type="text/css">.app { opacity: 0 }</style>
