Fixes Leaflet map visualization by importing the default leaflet stylesheet

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
   <title>Aplicativos Libres</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
   <link rel="shortcut icon" href="assets/media/favicon.ico">
+  <link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css' rel='stylesheet'>
   <style type="text/css">.app { opacity: 0 }</style>
 </head>
 <body>
